fix: information mobile

--- a/style.css
+++ b/style.css
@@ -283,7 +283,7 @@ ul{
 
     .home {
         flex-direction: column;
-        padding:5rem 0rem 10rem 0rem;
+        padding:5rem 0rem 2rem 0rem;
     }
     
     .home .profielfoto {
